# m2-MAE-reproduction

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
configs/: train.yaml
configs/dataset/: tiny_imagenet.yaml  tiny_imagenet_clf.yaml
configs/experiment/: fast_eval.yaml  fast_run.yaml  finetune_tin.yaml  linprobe_tin.yaml
configs/model/: vit_lite.yaml
configs/system/: cluster_slurm.yaml  local_mac.yaml
notebooks/: example.ipynb  example.ju.py
report/: main_ideas.md
report/latex/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
scripts/slurm/: job.slurm  submit.py
src/m2_ovo_mae/: train_classifier.py  train_pretrain.py
src/m2_ovo_mae/dataset/: tiny_imagenet.py  transforms.py
src/m2_ovo_mae/models/: classifier.py  mae.py  pos_embed.py
tests/: conftest.py  test_classifier.py  test_data.py  test_integration.py  test_models.py  test_pos_embed.py
