[project]
name = "m2-ovo-mae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "einops>=0.8.2",
  "hydra-core>=1.3.2",
  "timm>=1.0.24",
  "torch<2.10",
  "torchvision<0.25",
  "tqdm>=4.67.2",
  "wandb>=0.24.1",
]

[dependency-groups]
dev = ["pre-commit>=4.5.1", "pytest>=9.0.2", "ruff>=0.14.14", "ty>=0.0.14"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
