[project]
name = "m2-ovo-mae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "einops>=0.8.2",
  "hydra-core>=1.3.2",
  "timm>=1.0.24",
  "torch<2.10",
  "torchvision<0.25",
  "tqdm>=4.67.2",
  "wandb>=0.24.1",
]

[dependency-groups]
dev = ["pre-commit>=4.5.1", "pytest>=9.0.2", "ruff>=0.14.14", "ty>=0.0.14"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
# The 'select' list defines the rules to enable.
# E/F: Default syntax/style
# I: Isort (sorts imports automatically - huge for ML repos with many imports)
# N: PEP8 Naming (enforces class/function naming conventions)
# D: Pydocstyle (enforces the docstring format we discussed)
# UP: PyUpgrade (rewrites old python syntax to new, e.g., List[int] -> list[int])
# B: Flake8-Bugbear (catches common bugs and design problems)
# A: Flake8-Builtins (prevents you from shadowing python builtins like 'id' or 'dir')
# C4: Flake8-comprehensions (Optimizes list/dict comprehensions - faster DL data loading)
# SIM: Flake8-simplify
# ARG: Flake8-unused-arguments
# PT: Flake8-pytest-style
# RET: Flake8-return
select = [
  "E",
  "F",
  "I",
  "N",
  "D",
  "UP",
  "B",
  "A",
  "C4",
  "SIM",
  "ARG",
  "PT",
  "RET",
]

# Ignore specific rules that conflict with common Math/AI practices
ignore = [
  "D100",   # Missing docstring in public module (top of file)
  "D104",   # Missing docstring in public package (__init__.py)
  "D107",   # Missing docstring in __init__ (We document args in class docstring instead)
  "E501",   # Line too long (Let the formatter handle code, ignore docs length)
  "N806",   # Variable in function should be lowercase (Annoying for Math: allows 'X', 'W', 'b')
  "N803",   # Argument name should be lowercase (Allows 'X' as input argument)
  "D105",   # Missing docstring in magic method
  "ARG002",
  "RET504",
  "PT018",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
